--- a/practice/templates/color-card.hbs
+++ b/practice/templates/color-card.hbs
@@ -1,12 +1,2 @@
-<div class="color-card">
-      <div
-      class="color-swatch"
-      data-hex="{{hex}}"
-      data-rgb="{{rgb}}"
-      style="background-color: {{hex}}"
-    ></div>
-    <div class="color-meta">
-      <p>HEX: {{hex}} </p>
-      <p>RGB: {{rgb}} </p>
-      </div>
-    </div>
+
+<div>Hello from Handlebars!</div>
