--- a/practice/practice.css
+++ b/practice/practice.css
@@ -154,3 +154,17 @@ body {
   color: #555;
 }
 
+.alert {
+  opacity: 0;
+  transition: opacity 1.5s ease-in-out;
+  text-align: center;
+  margin-left: 100px;
+  width: 261px;
+  padding: 20px;
+  color: white;
+  background-color: green;
+}
+
+.is-visible {
+  opacity: 1;
+}
