--- a/practice/practice.css
+++ b/practice/practice.css
@@ -154,7 +154,7 @@ body {
   color: #555;
 }
 
-.alert {
+/* .alert {
   opacity: 0;
   transition: opacity 1.5s ease-in-out;
   text-align: center;
@@ -167,4 +167,4 @@ body {
 
 .is-visible {
   opacity: 1;
-}
+} */
