--- a/src/css/racetrack.css
+++ b/src/css/racetrack.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Roboto:wght@400;700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Roboto:wght@400;700&display=swap');
 
 body {
   background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
@@ -96,4 +96,4 @@ table.js-results-table tbody tr {
     opacity: 1;
     transform: translateY(0);
   }
-}
+} */
