--- a/src/css/fetch-api.css
+++ b/src/css/fetch-api.css
@@ -1,3 +1,66 @@
-.button {
-  background-color: blue;
+/* Вирівнюємо форму */
+.form-inline.search-form {
+  display: flex;
+  gap: 8px;
+  justify-content: center; /* Щоб інпут і кнопка були по центру */
+  margin-bottom: 20px;
+  margin-top: 100px;
+}
+
+/* Інпут */
+.search-form .form-control {
+  padding: 8px 12px;
+  font-size: 14px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  
+}
+
+/* Кнопка "Search" */
+.search-form .btn-primary {
+  background-color: #308DFF;
+  color: white;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.2s;
+}
+
+.search-form .btn-primary:hover {
+  background-color: #1d6fe0;
+}
+
+/* Обгортка для центрування кнопки */
+.show-more-wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+/* Кнопка "Показати ще" */
+.show-more-wrapper button {
+  background-color: #308DFF;
+  color: white;
+  border: none;
+  padding: 10px 18px;
+  border-radius: 6px;
+  font-size: 14px;
+  cursor: pointer;
+  transition: background-color 0.2s;
+}
+
+.show-more-wrapper button:hover {
+  background-color: #1d6fe0;
+}
+
+.articles {
+  display: flex;
+  flex-wrap: wrap;
+  width: 480px;
+  margin-left: 20px;
+  text-decoration: none;
+}
+a {
+  text-decoration: none;
+  color:black;
 }
